[gd_scene load_steps=3 format=3 uid="uid://dksn55e1gxbrx"]

[ext_resource type="Script" path="res://scripts/in_game_menus.gd" id="1_da7uh"]

[sub_resource type="LabelSettings" id="LabelSettings_moakp"]
font_size = 32

[node name="InGameMenus" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_da7uh")

[node name="Backdrop" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.282353)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenu" type="Panel" parent="CenterContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(600, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PauseMenu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MenuTitle" type="Label" parent="CenterContainer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Menu"
label_settings = SubResource("LabelSettings_moakp")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ContinueButton" type="Button" parent="CenterContainer/PauseMenu/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Continuar"

[node name="ExitButton" type="Button" parent="CenterContainer/PauseMenu/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Salir
"

[node name="VictoryMenu" type="Panel" parent="CenterContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(600, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VictoryMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VictoryMenu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MenuTitle" type="Label" parent="CenterContainer/VictoryMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "¡Has salvado a la humanidad!"
label_settings = SubResource("LabelSettings_moakp")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VictoryMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayAgainButton" type="Button" parent="CenterContainer/VictoryMenu/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Jugar de nuevo"

[node name="ExitButton" type="Button" parent="CenterContainer/VictoryMenu/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Salir
"

[node name="DefeatMenu" type="Panel" parent="CenterContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(600, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/DefeatMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/DefeatMenu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MenuTitle" type="Label" parent="CenterContainer/DefeatMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
size_flags_vertical = 3
text = "Las arañas derrotaron a la humanidad.
Quieres intentarlo de nuevo?"
label_settings = SubResource("LabelSettings_moakp")
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/DefeatMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayAgainButton" type="Button" parent="CenterContainer/DefeatMenu/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Jugar de nuevo"

[node name="ExitButton" type="Button" parent="CenterContainer/DefeatMenu/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Salir
"

[connection signal="pressed" from="CenterContainer/PauseMenu/MarginContainer/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CenterContainer/PauseMenu/MarginContainer/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CenterContainer/VictoryMenu/MarginContainer/VBoxContainer/HBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="CenterContainer/VictoryMenu/MarginContainer/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CenterContainer/DefeatMenu/MarginContainer/VBoxContainer/HBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="CenterContainer/DefeatMenu/MarginContainer/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
